# src/main/java/it/gov/pagopa/apiconfig/selfcareintegration/model/creditorinstitution/CreditorInstitutionInfo.java
@@ -28,8 +28,8 @@ public class CreditorInstitutionInfo {
     @NotNull
     private String businessName;
 
-    @JsonProperty("creditor_institution_code")
+    @JsonProperty("ci_tax_code")
     @Schema(example = "02438750586", description = "The tax code of the creditor institution", requiredMode = Schema.RequiredMode.REQUIRED)
     @NotBlank
-    private String creditorInstitutionCode;
+    private String ciTaxCode;
 }
